@@ -1,3 +1,8 @@
+2009-06-02  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Created a new function to retrieve XML
+	  tag values ('suppressempty' not needed anymore).
+
 2009-06-01  Sancho Lerena <slerena@artica.es>
 
 	*  util/pandora_diagnostic.sh: Command line diagnostic tool  for
